--- a/dokument-diplomska-naloga.tex
+++ b/dokument-diplomska-naloga.tex
@@ -1,315 +1,279 @@
-\documentclass[12pt,a4paper]{amsart}
-% ukazi za delo s slovenscino -- izberi kodiranje, ki ti ustreza
-\usepackage[slovene]{babel}
-% \usepackage[cp1250]{inputenc}
-%\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{amsmath,amssymb,amsfonts}
-\usepackage{url}
-%\usepackage[normalem]{ulem}
-\usepackage[dvipsnames,usenames]{color}
+\documentclass[mat1, tisk]{fmfdelo}
+% \documentclass[fin1, tisk]{fmfdelo}
+% Če pobrišete možnost tisk, bodo povezave obarvane,
+% na začetku pa ne bo praznih strani po naslovu, …
 
-% ne spreminjaj podatkov, ki vplivajo na obliko strani
-\textwidth 15cm
-\textheight 24cm
-\oddsidemargin.5cm
-\evensidemargin.5cm
-\topmargin-5mm
-\addtolength{\footskip}{10pt}
-\pagestyle{plain}
-\overfullrule=15pt % oznaci predlogo vrstico
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% METAPODATKI
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% - vaše ime
+\avtor{Tjaž Eržen}
 
-% ukazi za matematicna okolja
-\theoremstyle{definition} % tekst napisan pokoncno
-\newtheorem{definicija}{Definicija}[section]
-\newtheorem{primer}[definicija]{Primer}
-\newtheorem{opomba}[definicija]{Opomba}
+% - naslov dela v slovenščini
+\naslov{Paralelizacija grafovskih algoritmov v funkcijskih programskih jezikih}
 
-\renewcommand\endprimer{\hfill$\diamondsuit$}
+% - naslov dela v angleščini
+\title{Parallelisation of graph algorithms in functional programming languages}
 
+% - ime mentorja/mentorice s polnim nazivom:
+%   - doc.~dr.~Ime Priimek
+%   - izr.~prof.~dr.~Ime Priimek
+%   - prof.~dr.~Ime Priimek
+%   za druge variante uporabite ustrezne ukaze
+\mentorica{izr.~prof.~dr.~Ime Priimek}  % TODO: Spremeni v *mentor*
 
-\theoremstyle{plain} % tekst napisan posevno
-\newtheorem{lema}[definicija]{Lema}
-\newtheorem{izrek}[definicija]{Izrek}
-\newtheorem{trditev}[definicija]{Trditev}
-\newtheorem{posledica}[definicija]{Posledica}
+% - leto diplome
+\letnica{2023} 
 
+% TODO
+% - povzetek v slovenščini
+%   V povzetku na kratko opišite vsebinske rezultate dela. Sem ne sodi razlaga
+%   organizacije dela, torej v katerem razdelku je kaj, pač pa le opis vsebine.
+\povzetek{V povzetku na kratko opišemo vsebinske rezultate dela. Sem ne sodi
+razlaga organizacije dela -- v katerem poglavju/razdelku je kaj, pač pa le opis
+vsebine.}
 
-% za stevilske mnozice uporabi naslednje simbole
+% TODO
+% - povzetek v angleščini
+\abstract{Prevod slovenskega povzetka v angleščino.}
+
+% - klasifikacijske oznake, ločene z vejicami
+%   Oznake, ki opisujejo področje dela, so dostopne na strani https://www.ams.org/msc/
+\klasifikacija{68R10, 68W10, 68N18, 68Q85}
+
+% - ključne besede, ki nastopajo v delu, ločene s \sep
+\kljucnebesede{naravni logaritem\sep nenaravni algoritem}
+
+% - angleški prevod ključnih besed
+\keywords{natural logarithm\sep unnatural algorithm} % angleški prevod ključnih besed
+
+% - angleško-slovenski slovar strokovnih izrazov
+\slovar{
+\geslo{continuous}{zvezen}
+\geslo{uniformly continuous}{enakomerno zvezen}
+\geslo{compact}{kompakten -- metrični prostor je kompakten, če ima v njem vsako zaporedje stekališče; podmnožica evklidskega prostora je kompaktna natanko tedaj, ko je omejena in zaprta  }
+\geslo{glide reflection}{zrcalni zdrs ali zrcalni pomik -- tip ravninske evklidske izometrije, ki je kompozitum zrcaljenja in translacije vzdolž iste premice}  
+\geslo{lattice}{mreža}  
+\geslo{link}{splet}
+\geslo{partition}{\textbf{$\sim$ of a set} razdelitev množice; \textbf{$\sim$ of a number} razčlenitev števila}
+}
+
+% - ime datoteke z viri (vključno s končnico .bib), če uporabljate BibTeX
+\literatura{literatura.bib}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% DODATNE DEFINICIJE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% naložite dodatne pakete, ki jih potrebujete
+\usepackage{algpseudocode}  % za psevdokodo
+\usepackage{algorithm}      % za algoritme
+\floatname{algorithm}{Algoritem}
+\renewcommand{\listalgorithmname}{Kazalo algoritmov}
+
+% deklarirajte vse matematične operatorje, da jih bo LaTeX pravilno stavil
+% \DeclareMathOperator{\conv}{conv}
+% na razpolago so naslednja matematična okolja, ki jih kličemo s parom
+% \begin{imeokolja}[morebitni komentar v oklepaju] ... \end{imeokolja}
+%
+% definicija, opomba, primer, zgled, lema, trditev, izrek, posledica, dokaz
+
+% za številske množice uporabite naslednje simbole
 \newcommand{\R}{\mathbb R}
 \newcommand{\N}{\mathbb N}
 \newcommand{\Z}{\mathbb Z}
+% Lahko se zgodi, da je ukaz \C definiral že paket hyperref,
+% zato dobite napako: Command \C already defined.
+% V tem primeru namesto ukaza \newcommand uporabite \renewcommand
 \newcommand{\C}{\mathbb C}
 \newcommand{\Q}{\mathbb Q}
 
-% ukaz za slovarsko geslo
-\newlength{\odstavek}
-\setlength{\odstavek}{\parindent}
-\newcommand{\geslo}[2]{\noindent\textbf{#1}\hspace*{3mm}\hangindent=\parindent\hangafter=1 #2}
-
-% naslednje ukaze ustrezno popravi
-\newcommand{\program}{Matematika} % ime studijskega programa: Matematika/Finan"cna matematika
-\newcommand{\imeavtorja}{Tjaž Eržen} % ime avtorja
-\newcommand{\imementorja}{prof.~dr./doc.~dr. Matija Pretnar} % akademski naziv in ime mentorja
-\newcommand{\naslovdela}{Paralelizacija grafovskih algoritmov v funkcijskih programskih jezikih}
-\newcommand{\letnica}{2023} %letnica diplome
-
-
-% vstavi svoje definicije ...
-
-
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% ZAČETEK VSEBINE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
 
-% od tod do povzetka ne spreminjaj nicesar
-\thispagestyle{empty}
-\noindent{\large
-UNIVERZA V LJUBLJANI\\[1mm]
-FAKULTETA ZA MATEMATIKO IN FIZIKO\\[5mm]
-\program\ -- 1.~stopnja}
-\vfill
-
-\begin{center}{\large
-\imeavtorja\\[2mm]
-{\bf \naslovdela}\\[10mm]
-Delo diplomskega seminarja\\[1cm]
-Mentor: \imementorja}
-\end{center}
-\vfill
-
-\noindent{\large
-Ljubljana, \letnica}
-\pagebreak
-
-\thispagestyle{empty}
-\tableofcontents
-\pagebreak
-
-\thispagestyle{empty}
-\begin{center}
-{\bf \naslovdela}\\[3mm]
-{\sc Povzetek}
-\end{center}
-% tekst povzetka v slovenscini
-TODO
-\vfill
-\begin{center}
-{\bf Paralellisation of Graph Algorithms in Functional Programming Languages}\\[3mm] % prevod slovenskega naslova dela 
-{\sc Abstract}
-\end{center}
-% tekst povzetka v anglescini
-TODO.
-
-\vfill\noindent
-{\bf Math. Subj. Class. (2010):} navedite vsaj eno klasifikacijsko oznako -- dostopne so na \url{www.ams.org/mathscinet/msc/msc2010.html}  \\[1mm]  
-{\bf Klju"cne besede:} Grafovski algoritmi, paralelizacija, funkcijski programski jeziki, večjedrno procesorsko računanje, OCaml 5  \\[1mm]  
-{\bf Keywords:} Graph algorithms, paralellisation, functional programming languages, OCaml 5
-\pagebreak
-
-
-
-% tu se zacne tekst seminarja
 \section{Uvod}
-\label{uvod-poglavje}
 
-Grafovski algoritmi so dan danes ključni pri modeliranju širokega nabora vsakdanjih problemov: Družbena omrežja, računalniška omrežja in računalniške komunikacije ter podatkovna analitika. Splošno, z grafi lahko abstrahiramo kakršno koli množico odnosov med danimi entitetami, vse od računanja razdalj med mesti, pa do računanje vodnega pretoka od enega kraja do drugega.
+Na začetku prvega poglavja/razdelka (ali v samostojnem razdelku z naslovom
+Uvod) napišite kratek zgodovinski in matematični uvod. Pojasnite motivacijo za
+problem, kje nastopa, kje vse je bil obravnavan. Na koncu opišite tudi
+organizacijo dela -- kaj je v kakšnem razdelku.
 
-Ker velikost grafov raste nelinearno z večanjem podatkov, z računanjem pogosto trčimo ob računsko prezahtevno oviro. Načinov za reševanje tega je več, pogosto pa je ena izmed najpogostejših ozkih grl to, da našega programa nismo napisali paralelno ter s tem izkoristili celotne kapacitete računalnika, temveč smo naš program poganjali zgolj na enem jedru. Posledično je paralelizacija tovrstnih algoritmov v zadnjih letih postala zanimiva in aplikativna raziskovalna tema. V moji diplomski nalogi se bom tako ukvarjal z paralelizacijo grafovksih algoritmov.
+Če se uvod naravno nadaljuje v besedilo prvega poglavja, lahko nadaljujete z
+besedilom v istem razdelku, sicer začnete novega. Na začetku vsakega
+razdelka/podraz\-delka poveste, čemu se bomo posvetili v nadaljevanju. Pri
+pisanju uporabljajte ukaze za matematična okolja, med formalnimi enotami
+dodajte vezno razlagalno besedilo.
 
-Funkcijski programski jeziki zagotavljajo matematične abstrakcije na višjem nivoju, kot so jih to sposobni navadni imperativni programski jeziki, kot so na primer Python, C++ in Java. Ena izmed prednosti funkcijskih programskih jezikov je, da omogočajo deklarativno programiranje, kar jih naredi bolj paralelizabilne (več o tem v nadaljevanju). Tako me je zanimanje za matematične grafe, algoritme in funkcijske jezike pripeljalo v združevanje vseh teh tem hkrati: V svoji diplomski nalogi se bom tako ukvarjal s \textit{paralelizacijo grafovskih algoritmov v funkcijskih programskih jezikih}.
+\section{Zveznost}
 
-Vzporednost na nivoju pomnilnika je moč doseči na dva načina: Tako, da je pomnilnik vsem računalniškim jedrom skupen, ali pa da je pomnilnik \textit{porazdeljen}. V tej diplomski nalogi se bom osredotočal na sisteme s skupnim pomnilnikom. V tej diplomski nalogi se bom osredotočal zgolj na sisteme s skupnim pomnilnikom.
+V tem poglavju bomo ponovili osnovne pojme, povezane z zveznostjo funkcij. Pri
+tem bomo sledili~\cite{glob}.
 
-Vse več funkcijskih programskih jezikov, kot so Scala, F\# ter Haskell ima implementirane knjižnice in ogrodja za paralelizacijo grafovskih algoritmov:
-\begin{itemize}
-    \item knjižnica \textit{Graphalyze} v Haskellu zagotavlja vzporedne algoritme za najkrajšo pot ter iskanje krepko povezanih komponent.
-    \item \textit{GraphX} v Scali ponuja implementacijo paralelnega Googlovega PageRank algoritma.
-    \item \textit{Alea.cuBase} nam ponuja osnovne paralelne algoritme v jeziku F\#.
-\end{itemize}
-
-Od konca lanskega leta pa imamo nov funkcijski programski jezik, ki je postal ``multicore'' - to je OCaml, ki se med drugim poučuje na naši fakulteti v sklopu računalniško-orientiranih predmetov. Zato sem to priložnost izoristil, da svoje računalniške programe pišem v tem funkcijskem jeziku. V tej diplomski naloge se bom tako spustil v tovrstne knjižnice v funkcijskih jezikih, ki že obstajajo, pregledal novejše raziskave kar se tiče grafovskih algoritmov v imperativnih jezikih, to prevedel v deklarativni jezik ter vse to skupaj povezav v zaključeno celovito knjižnico v OCamlu.
-
-
-\section{Kratek uvod v funkcijsko programiranje}
-
-\subsection{Zakaj funkcijski programski jeziki}
+Viri se v seznamu literature prikažejo le, če jih uporabimo v besedilu,
+zato moramo citirati tudi~\cite{lang,zbornik,kalisnik,wiki,vec-avtorjev}.
 
 \begin{definicija}
-Stranski učinki so v programiranju kakršen koli odklon med čistimi matematičnimi funkcijami ter našim programom.
+Funkcija $f\colon [a,b]\to\R$ je \emph{zvezna}, če \ldots
 \end{definicija}
 
-Funkcijsko programiranje je računalniški koncept, znotraj katerega programe pišemo komponiranjem in apliciranjem matematičnih funkcij. Programiranje take vrste uporabnika preko zasnove samega jezika spodbudi, da piše t.i. programe brez stranskih učinkov oz. jih omeji kakor se le da. Primer stranskega učinka bi bilo spreminjanje uporabniškega pomnilnika, ali pa branje tekstovnih datotek.
-
-Kot rečeno, v splošnem se stranskim učinkom želimo kakor se le da izogniti, saj zmanjšajo preglednost naše kode, prav tako pa lahko uporabnika zmede, če večkrat požene isto. 
-
-Kot rečeno, v splošnem se stranskim učinkov želimo izogniti, saj pogosto zbegajo tako razvijalca kot tudi uporabnika: Sorazvijalcu zmanjšajo preglednost naše kode ter privedejo do bolj pogostih napak, iz uporabniškega stališča pa se kakšen podatek v ozadju nehote spremeni, kar uporabnika pogosto zbega. Tiste dele kode, ki pa stranske učinke imajo, pa izoliramo v smislu da dodatno ne počnejo še drugih čistih matematičnih operacij.
-
-% TODO: Dodaj code snippet, kjer pokažeš, zakaj stranski učinki niso zaželjeni.
-
-Zadnjih par let funkcijski programski jeziki zaradi svojih lastnosti pridobivajo na popularnosti. Zaradi zasnove funkcijskih programskih jezikov so tovrstni programi tipično lepše razdeljeni v manjše kose kode, znotraj katerih vsak kos počne natanko eno vlogo, kar omogoči lažjo uporabo iste programske kode na več različnih problemih. Zaradi takih učinkov ter drugih razlik, ki ločijo funkcijske ter imperativne jezike (npr. preverjanje tipov pred izvajanjem programa) pa je naš program prav tako precej lažje testirati, razhroščevati in vzdrževati. Funkcijski programer se pogosto pošali, da mu program njegovo napako sporoči že preden je program sploh zagnal. Tako je uporabnik ``prisiljen'' pisati bolj robustne ter zanesljive programe, manj izpostavljene potencialnim napakam ter sesutjem.
-
-Zadnja prednost, ki bi jo izpostavil, je razlika v hitrosti visokonivojskih imperativnih (Python, Ruby, Java) ter funkcijskih programskih jezikov. 
-
-Zadnja prednost, ki bi jo izpostavil, je razlika v hitrosti funkcijskih jezikov - le-ti so po eni strani precej bolj ekpresivni od nižjenivojskih imperativnih jezikov (C++, C) ter le malo počasnejši kar se tiče izvajanja, po drugi strani pa precej  hitrejši od visokonivojskih programskih jezikov (Python, Ruby, Java), s čimer imajo dobro uporabno nišo v industriji, kjer sta važna tako hitrost kot ekspresivnost jezika (npr. uporaba takih jezikov za visoko-frekvenčno trgovanje s finančnimi instrumenti).
-
-Kot že omenjeno v poglavju \ref{uvod-poglavje}, pa funkcijski jeziki prav tako omogočajo lažjo sočasnost ter paralelizabilnost programa. Vse to funkcijske jezike naredi primerne za t.i. \textit{visoko performančne sisteme z večnitinimi programi}.
-
-% TODO: Dodaj še kaj o paralelizabilnosti tukajle.
-
-\subsection{Funkcijske podatkovne strukture}
-
-Ko potrebujem npr. implementacijo vrste s prednostjo v Pythonu, je pogosto dovolj, da v splošnem učbeniku najdem njeno implementacijo ter to prepišem. Razvijalci, ki pa svojo kodo pišejo v funkcijskih programskih jezikih, pa pogosto te sreče nimajo. Razloga sta dva: Prvi bi bil, da funkcijski jeziki niso tako razširjeni kot imperativni, drugi pa je, da se funkcijski jeziki med sabo bolj razlikujejo kot se med sabo razlikujejo imperativni. Poljubno psevdokodo, napisano v imperativnem smislu, je lažje prirediti v Python, kot pa je npr. poljubno psevdokodo, napisano v funkcijskem smislu prirediti v na primer OCaml.
-
-\begin{definicija}
-Podatkovna struktura je \textbf{vztrajna}, če lahko vidimo njeno zgodovino spreminjanja. Taka podatkovna struktura hrani svoje prejšne verzije.
-Podatkovna struktura je \textbf{minljiva}, je podatkovna struktura, ki ne pomni svojih prejšnih verzij.
-\end{definicija}
-
-Funkcijski programski jeziki imajo zanimivo lastnost, da so vse podatkovne strukture avtomatsko \textit{vztrajne}, medtem ko je v imperativnih programskih jezikih vztrajne podatkovne strukture tipično težje implementirati, prav tako pa so asimptotsko počasnejše kot ``minljive'' podatkovne strukture. Prednost vztrajnih podatkovnih struktur očitno ta, da lahko dostopamo do svojih prejšnjih različic, prednost minljivih struktur pa je, da da so hitrejše na pram vztrajnih. Posledično so v splošnem podatkovne strukture v funkcijskih jezikih asimptotsko počasnejše kot pri imperativnih jezikih.
-
-% TODO (kasneje): Podaj primer podatkovne strukture, ki se je na funkcijski način ne da učinkovito implementirati.
-Še ena slabost podatkovnih struktur v funkcijskih jezikih je, da se nekaterih podatkovnih struktur preprosto ne da učinkovito implementirati na funkcijski način.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-\begin{definicija}
-Funkcija $f\colon [a,b]\to\R$ je {\em zvezna}, "ce...
-\end{definicija}
-
-Osnovne rezultate o zveznih funkcijah najdemo v \cite{glob}. Navedimo le naslednji izrek.
+Podrobneje si poglejmo naslednji rezultat. Ker se bomo kasneje nanj sklicevali,
+si pripravimo oznako z ukazom \verb|\label{oznaka}|. Seveda morajo biti oznake
+različnih trditev različne. Enako označujemo tudi druga okolja oziroma enote
+besedila.
 
 \begin{izrek}\label{izr:enakomerno}
 Zvezna funkcija na zaprtem intervalu je enakomerno zvezna.
 \end{izrek}
 
-\proof
-Na za"cetku dokaza, "ce je to le mogo"ce in smiselno, razlo"zite idejo dokaza. 
+\begin{dokaz}
+Na začetku dokaza, če je to le mogoče in smiselno, razložite idejo dokaza.
 
-Dokazovali bomo s protislovjem. Pomagali si bomo z definicijo zveznosti in s kompaktnostjo intervala.
-Izberimo $\varepsilon>0$. "Ce $f$ ni enakomerno zvezna, potem za vsak $\delta>0$ obstajata $x, y$, ki zado"s"cata
+Dokazovali bomo s protislovjem. Pomagali si bomo z definicijo zveznosti in s
+kompaktnostjo intervala.  Izberimo $\varepsilon>0$. Če $f$ ni enakomerno
+zvezna, potem za vsak $\delta>0$ obstajata $x, y$, ki zadoščata
 \begin{equation}\label{eq:razlika}
-|x-y|<\delta\quad \text{in}\quad |f(x)-f(y)| \ge \varepsilon.
+  |x-y|<\delta\quad \text{in}\quad |f(x)-f(y)| \ge \varepsilon. \qedhere
 \end{equation}
-\endproof
+\end{dokaz}
 
-Na ena"cbe se sklicujemo takole: Oglejmo si "se enkrat neena"cbi \eqref{eq:razlika}.\\
+V zgornjem primeru smo kvadratek za konec dokaza postavili v zadnjo vrstico
+besedila, ki je vrstična formula, s pomočjo ukaza \verb|\qedhere|.  Ta ukaz
+ustrezno deluje znotraj okolij \emph{equation, align*} in podobnih, ne pa
+znotraj \verb|$$ ... $$|.
 
-"Ce dokaz trditve ne sledi neposredno formulaciji trditve, moramo povedati, kaj bomo dokazovali. To naredimo tako, da ob ukazu za izpis besede \emph{Dokaz} dodamo neobvezni parameter, v katerem napi"semo tekst, ki se bo izpisal namesto besede \emph{Dokaz}.
+Oglejmo si še enkrat neenačbi~\eqref{eq:razlika}. Na formule se sklicujemo z
+ukazom \verb|\eqref{oznaka}|, ki postavi zaporedno številko enačbe
+v oklepaje, na trditve in ostale enote pa z ukazom \verb|\ref{oznaka}|. Črni
+pravokotnik ob robu strani označuje predolgo vrstico, kjer \LaTeX ni uspel
+pravilno postaviti besedila, zato mu morate pomagati, npr.\ tako, da stavek
+nekoliko preoblikujete, sami razdelite nedeljivo enoto (npr. razdelite
+matematično formulo na dva dela) ali pa ponudite možnosti za deljenje težavne
+besede s pomočjo znakov\verb|\-|, ki jih postavite na mesto, kjer se besedo sme
+deliti, npr.\  \verb|te\-žav\-nost\-ni\-ca|. Zgoraj bi tako lahko zapisali:
 
-\proof[Dokaz izreka \ref{izr:enakomerno}]
-Dokazovanja te trditve se lahko lotimo tudi takole...
-\endproof
+Oglejmo si še enkrat neenačbi~\eqref{eq:razlika}. Za sklicevanje na označene
+enote besedila imamo na razpolago dva ukaza; na formule se sklicujemo z ukazom
+\verb|\eqref{oznaka}|, \dots
 
-\subsection{Naslov morebitnega podrazdelka} Besedilo naj se nadaljuje v vrstici naslova, torej za ukazom \verb|\subsection{}| ne smete izpustiti prazne vrstice.
+V predzadnjem odstavku je v oklepaju za okrajšavo npr.\ nastal predolg
+presledek sredi stavka, saj je \LaTeX zaradi pike sklepal, da je na tem mestu
+stavka konec. Tak predolg presledek preprečimo tako, da za piko sredi stavka
+postavimo poševnico in za njo presledek, torej \verb|\ |.\\
 
-V tem podrazdelku si bomo ogledali "se nekatere posledice zveznosti. 
+Če dokaz trditve ne sledi neposredno formulaciji trditve, moramo povedati, kaj
+bomo dokazovali. To naredimo tako, da ob ukazu za okolje dokaz dodamo neobvezni
+parameter,  v katerem napišemo besedilo, ki se bo izpisalo namesto besede
+\emph{Dokaz}, npr.\ \verb|\begin{Dokaz}[Dokaz izreka \ref{izr:enakomerno}]|.
 
-\begin{lema}
-Naj bo $f$ zvezna in ...
-\end{lema}
+\begin{dokaz}[Dokaz izreka \ref{izr:enakomerno}]
+  Dokazovanja te trditve se lahko lotimo tudi takole \ldots
+\end{dokaz}
 
-$$\vdots$$
+\subsection{Naslov morebitnega (pod)razdelka} Besedilo naj se nadaljuje v vrstici naslova, torej za ukazom \verb|\subsection{}| ne smete izpustiti prazne vrstice.
 
-Na konec dela sodita angle"sko-slovenski slovar"cek strokovnih izrazov in seznam uporabljene literature. Slovar naj vsebuje vse pojme, ki ste jih spoznali ob pripravi dela, pa tudi "ze znane pojme, ki ste jih spoznali pri izbirnih predmetih. Najprej navedite angle"ski pojem (ti naj bodo urejeni po abecedi) in potem ustrezni slovenski prevod; za"zeleno je, da temu sledi tudi opis pojma, lahko komentar ali pojasnilo. Slovarska gesla navajajte z ukazom \verb|\geslo{}{}|. Med zaporednima geselskima ukazoma v \LaTeX\ datoteki mora biti prazna vrstica, da so gesla izpisana vsako v svoji vrstici.
-
-Pri navajanju literature si pomagajte s spodnjimi primeri; najprej je opisano pravilo za vsak tip vira, nato so podani primeri. Posebej opozarjam, da spletni viri uporabljajo paket url, ki je vklju"cen v preambuli. Polje ``ogled'' pri spletnih virih je obvezno; "ce je kak podatek neznan, ustrezno ``polje'' seveda izpustimo. Literaturo je potrebno urediti po abecednem vrstnem redu; najprej navedemo vse vire z znanimi avtorji po abecednem redu avtorjev (po priimkih, nato imenih), nato pa spletne vire, urejene po naslovih strani. "Ce isti vir citiramo v dveh oblikah, kot tiskani in spletni vir, najprej navedemo tiskani vir, nato pa "se podatek o tem, kje je dostopen v elektronski obliki.
-
-% slovar
-\section*{Slovar strokovnih izrazov}
-
-\geslo{funkcijsko programiranje}{računalniški koncept, znotraj katerega programe pišemo s komponiranjem in apliciranjem matematičnih funkcij}
-
-\geslo{stranski učinki programov}{odklon med čistimi matematičnimi funkcijami ter našim programom.}
-
-% TODO: Je vztrajno dober prevod ``persistent''?
-\geslo{Vztrajna podatkovna struktura}{}
-
-% TODO: Je minljivo dober prevod ``ephemeral''?
-\geslo{Minljiva podatkovna struktura}{}
-
-
-% seznam uporabljene literature
-\begin{thebibliography}{99}
-
-\bibitem{FP-Scala}
-P.~Chiusano, R.~Bjarnason, \emph{Functional Programming in Scala}  \textbf{1}, Manning Publications Co., New York, 2015.
-
-\bibitem{referenca-clanek}
-P.~Chiusano, R.~Bjarnason \emph{Naslov "clanka}, okraj"sano ime revije \textbf{letnik revije} (leto izida) strani od--do.
-
-\bibitem{navodilaOMF}
-C.~Velkovrh, \emph{Nekaj navodil avtorjem za pripravo rokopisa}, Obzornik mat.\ fiz.\ \textbf{21} (1974) 62--64.
-
-\bibitem{vec-avtorjev}
-P.~Angelini, F.~Frati in M.~Kaufmann, \emph{Straight-line rectangular drawings of clustered graphs}, Discrete Comput.\ Geom.\ \textbf{45} (2011) 88--140.
+Podobno kot lahko spremenimo ime dokaza, lahko dodamo komentar v ime trditve,
+torej s pomočjo neobveznega parametra; prvega od spodnjih izpisov dosežemo z
+ukazom \verb|\begin{posledica}[izrek o vmesni vrednosti]|. Če želimo v
+parametru navesti vir, pri katerem bomo navedli podatek o tem, kje v viru to
+trditev najdemo, pa uporabimo ukaz
+\verb|\begin{posledica}[\protect{\cite[izrek 3.14]{glob}}]|. Seveda lahko obe
+možnosti kombiniramo.
 
 
+\begin{posledica}[izrek o vmesni vrednosti]
+  Naj bo $f$ zvezna in \ldots
+\end{posledica}
 
-\bibitem{referenca-knjiga}
-I.~Priimek, \emph{Naslov knjige}, morebitni naslov zbirke  \textbf{zaporedna "stevilka}, zalo"zba, kraj, leto izdaje.
+Ali pa
 
-\bibitem{glob}
-J.~Globevnik in M.~Brojan, \emph{Analiza I}, Matemati"cni rokopisi \textbf{25}, DMFA -- zalo"zni"stvo, Ljubljana, 2010.
+\begin{posledica}[izrek o vmesni vrednosti \protect{\cite[izrek 3.14]{glob}}]
+  Naj bo $f$ zvezna in \ldots
+\end{posledica}
 
-\bibitem{glob-vse}
-J.~Globevnik in M.~Brojan, \emph{Analiza I}, Matemati"cni rokopisi \textbf{25}, DMFA -- zalo"zni"stvo, Ljubljana, 2010; dostopno tudi na
-\url{http://www.fmf.uni-lj.si/~globevnik/skripta.pdf}.
+Podobno lahko napovemo tudi vsebino primera.
 
-\bibitem{lang}
-S.~Lang, \emph{Fundamentals of differential geometry}, Graduate Texts in Mathematics {\bf 191}, Springer-Verlag, New York, 1999.
+\begin{primer}[nezvezna funkcija nima nujno lastnosti povprečne vrednosti]
+  Naj bo $f \colon \R \to \R$ dana s predpisom \dots
+\end{primer}
 
+\subsection{Pisanje algoritmov}
+Za pisanje algoritmov sta na voljo okolji \texttt{algorithm} in
+\texttt{algorithmic} iz paketov \texttt{algorithm} in \texttt{algorithmix}, ki
+sodelujeta podobno kot \texttt{table} in \texttt{tabular}. Algoritmi plavajo
+med tekstom, enako kot slike in tabele, nanje se lahko tudi sklicujemo, kot
+prikazano v izvorni kodi in v algoritmu~\ref{alg:metoda}. Sklicujemo se lahko
+tudi na pomembne vrstice, npr.\ na vrstico~\ref{alg:pomembna-vrstica}, ki
+predstavlja glavni del algoritma. Za primer pisanja algoritma se posvetujte s
+primerom v tem dokumentu, za bolj napredne primere uporabe, kot na primer
+razbijanje algoritma na več kosov, pa z (precej razumljivo) uradno
+dokumentacijo\footnote{\url{http://tug.ctan.org/macros/latex/contrib/algorithmicx/algorithmicx.pdf}}.
+Če želite vključiti izvorno kodo nekega programa, priporočamo paket
+\texttt{minted}\footnote{\url{https://github.com/gpoore/minted}}.
 
+\algnewcommand\algorithmicto{\textbf{to}}
+\algnewcommand\algorithmicin{\textbf{in}}
+\algnewcommand\algorithmicforeach{\textbf{for each}}
+\algrenewtext{For}[3]{\algorithmicfor\ #1 $\gets$ #2\ \algorithmicto\ #3\ \algorithmicdo}
+\algdef{S}[FOR]{ForEach}[2]{\algorithmicforeach\ #1\ \algorithmicin\ #2\ \algorithmicdo}
 
-\bibitem{referenca-clanek-v-zborniku}
-I.~Priimek, \emph{Naslov "clanka}, v: naslov zbornika (ur.\ ime urednika), morebitni naslov zbirke  \textbf{zaporedna "stevilka}, zalo"zba, kraj, leto izdaje, str.\ od--do.
+\begin{algorithm}[ht]
+  \caption{Opis, ki ima enako funkcionalnost kot opis pod sliko.}
+  \label{alg:metoda}
+  \raggedright
+  \textbf{Vhod:} Števili $n, m \in \N, n > m$. \\
+  \textbf{Izhod:} Decimalno število $x$, ki aproksimira rešitev enačbe $n x = m$.
+  \begin{algorithmic}[1]
+    \Function{reši}{$n$, $m$} \Comment{Vsi vhodni parametri morajo biti opisani.}
+    \State $a \gets [\,]$ \Comment{Spremenljivka $a$ naj postane prazna kopica.}
+    \For{$i$}{$1$}{$n$}
+      \If{$i \operatorname{mod} 7 = 5$}
+        \State \Call{heapop}{$a$}
+      \ElsIf{$i < 5$}
+      \State \Call{heappush}{$a, \frac{i+12}{7} + \pi$} \Comment{Lahko uporabljamo matematiko.}
+      \Else
+        \State \Call{heappush}{$a, i$}
+      \EndIf
+    \EndFor
+    \Statex  \Comment{Prazna vrstica}
+    \State $x \gets 0$  \Comment{To je primer komentarja.}
+    \ForEach{e}{a}
+      \State $x \gets 1 + \sqrt[e]{x}$
+    \EndFor
+    \While{$|x| > \varepsilon$}
+      \State $x \gets x / 2$
+    \EndWhile
+    \State $x \gets m / n$ \label{alg:pomembna-vrstica}
+    \State \Return $x$  \Comment{Vsi izhodni parametri morajo biti opisani nad algoritmom.}
+    \EndFunction
+  \end{algorithmic}
+\end{algorithm}
 
-\bibitem{zbornik}
-S.~Cappell in J.~Shaneson, \emph{An introduction to embeddings, immersions and singularities in codimension two}, v: Algebraic and geometric topology, Part 2 (ur.\ R.~Milgram), Proc.\ Sympos.\ Pure Math.\ \textbf{XXXII}, Amer.\ Math.\ Soc., Providence, 1978, str.\ 129--149.
+\section{Konec dela}
 
+Na konec dela sodita angleško-slovenski slovarček strokovnih izrazov in seznam
+uporabljene literature, morebitne priloge (programska koda, daljša ponovitev
+dela snovi, ki je bil obravnavan med študijem \dots) pa neposredno pred ti
+enoti. Slovar naj vsebuje vse pojme, ki ste jih spoznali ob pripravi dela, pa
+tudi že znane pojme, ki ste jih spoznali pri izbirnih predmetih. Najprej
+navedite angleški pojem (ti naj bodo urejeni po abecedi) in potem ustrezni
+slovenski prevod; zaželeno je, da temu sledi tudi opis pojma, lahko komentar
+ali pojasnilo. Slovarska gesla navajajte z ukazom \verb|\geslo{}{}|, npr.\
+\verb|\geslo{continuous}{zvezen}|.
 
-
-\bibitem{diploma-magisterij}
-I.~Priimek, \emph{Naslov dela}, diplomsko/magistrsko delo, ime fakultete, ime univerze, leto.
-
-\bibitem{kalisnik}
-J.~Kali"snik, \emph{Upodobitev orbiterosti}, diplomsko delo, Fakulteta za matematiko in fiziko, Univerza v Ljubljani, 2004.
-
-
-
-\bibitem{referenca-spletni-vir}
-I.~Priimek, \emph{Naslov spletnega vira}, v: ime morebitne zbirke/zbornika, ki vsebuje vir, verzija "stevilka/datum, [ogled datum], dostopno na \url{spletni.naslov}.
-
-\bibitem{glob-splet}
-J.~Globevnik in M.~Brojan, \emph{Analiza 1}, verzija 15.~9.~2010, [ogled 12.~5.~2011], dostopno na \url{http://www.fmf.uni-lj.si/~globevnik/skripta.pdf}.
-
-\bibitem{wiki}
-\emph{Matrix (mathematics)}, v: Wikipedia: The Free Encyclopedia, [ogled 12.~5.~2011], dostopno na \url{http://en.wikipedia.org/wiki/Matrix_(mathematics)}.
-
-
-
-
-\end{thebibliography}
+Pri navajanju literature si pomagajte s spodnjimi primeri; najprej je opisano
+pravilo za vsak tip vira, nato so podani primeri. Člen literature napišete z
+ukazom \verb|\bibitem{oznaka} podatki o viru|, kjer mora \emph{ozmaka} enolično
+določati vir.  Posebej opozarjam, da spletni viri uporabljajo paket url, ki je
+vključen v~.cls datoteki. Polje ``ogled'' pri spletnih virih je obvezno; če je
+kak podatek neznan, ustrezno ``polje'' seveda izpustimo. Literaturo je potrebno
+urediti po abecednem vrstnem redu; najprej navedemo vse vire z znanimi avtorji
+(tiskane in spletne) po abecednem redu avtorjev (po priimkih, nato imenih),
+nato pa spletne vire brez avtorjev, urejene po naslovih strani. Če isti vir
+navajamo v dveh oblikah, kot tiskani in spletni vir, najprej navedemo tiskani
+vir, nato pa še podatek o tem, kje je dostopen v elektronski obliki.
 
 \end{document}
-
